[api] patch exec command
